prevent word from wrapping

--- a/src/sass/pages/_project.scss
+++ b/src/sass/pages/_project.scss
@@ -85,6 +85,7 @@
       padding: 0.3rem 0.6rem;
       border-radius: 5px;
       color: variable.$colorGray;
+      white-space: nowrap;
     }
   }
 }
